--- a/config/analysis_settings.json
+++ b/config/analysis_settings.json
@@ -1343,6 +1343,9 @@
         "NVDA": 600,
         "BTCUSD": 300
     },
+    "spot_safe_mode_seconds": {
+        "default": 60
+    },
     "data_latency_guard": {  
         "USOIL": {
             "latency_k1m_sec_max": 700
