--- a/config/analysis_settings.json
+++ b/config/analysis_settings.json
@@ -2112,10 +2112,10 @@
         "enabled": true,
         "manual_position_tracking": {
             "enabled": true,
-            "positions_file": "public/_manual_positions.json",
+            "positions_file": "trading.db",
             "writer": "dual",
             "redundant_write_guard": true,
-            "pending_exit_file": "public/_manual_positions_pending_exit.json",
+            "pending_exit_file": "trading.db",
             "treat_missing_file_as_flat": false,
             "post_exit_cooldown_minutes": {
                 "default": 15,
