--- a/.github/workflows/backup-trading-state.yml
+++ b/.github/workflows/backup-trading-state.yml
@@ -17,4 +17,4 @@ jobs:
             touch trading_state.db
           fi
       - name: Run backup
-        run: scripts/backup_trading_state.sh
+        run: bash scripts/backup_trading_state.sh
