--- a/config/analysis_settings.json
+++ b/config/analysis_settings.json
@@ -1346,7 +1346,19 @@
     "spot_safe_mode_seconds": {
         "default": 60
     },
-    "data_latency_guard": {  
+    "data_latency_guard": {
+        "DEFAULT": {
+            "latency_k1m_sec_max": 900
+        },
+        "GOLD_CFD": {
+            "latency_k1m_sec_max": 900
+        },
+        "XAGUSD": {
+            "latency_k1m_sec_max": 900
+        },
+        "EURUSD": {
+            "latency_k1m_sec_max": 900
+        },
         "USOIL": {
             "latency_k1m_sec_max": 700
         }
@@ -2075,7 +2087,14 @@
                 "enabled": true,
                 "gap_max": 2.0,
                 "size_scale": 0.65,
-                "rr_add": 0.15
+                "rr_add": 0.15,
+                "asset_overrides": {
+                    "GOLD_CFD": {
+                        "gap_max": 4.0,
+                        "size_scale": 0.7,
+                        "rr_add": 0.1
+                    }
+                }
             }
         },
         "latency_relaxation": {
@@ -2096,6 +2115,9 @@
             "asset_map": {
                 "USOIL": "extended",
                 "NVDA": "relaxed",
+                "GOLD_CFD": "relaxed",
+                "XAGUSD": "relaxed",
+                "EURUSD": "relaxed",
                 "default": "strict"
             }
         }
@@ -2103,6 +2125,10 @@
     "precision_flow_overrides": {
         "BTCUSD": {
             "delta_blocker_abs_max": 10.0
+        },
+        "GOLD_CFD": {
+            "min_signals": 0,
+            "strength_floor": 0.6
         },
         "XAGUSD": {
             "delta_blocker_abs_max": 6.0
