Change threshold profiles to baseline values
Updated various threshold profiles and parameters to 'baseline' values.

--- a/config/analysis_settings.json
+++ b/config/analysis_settings.json
@@ -184,44 +184,44 @@
         }
     },
     "active_session_status_profile": "default",
-    "active_entry_threshold_profile": "relaxed",
-    "weekday_entry_threshold_profile": "relaxed",
+    "active_entry_threshold_profile": "baseline",
+    "weekday_entry_threshold_profile": "baseline",
     "entry_profile_schedule_by_tod": {
         "default": {
-            "open": "relaxed",
-            "mid": "relaxed",
-            "close": "relaxed"
+            "open": "baseline",
+            "mid": "baseline",
+            "close": "baseline"
         },
         "assets": {
             "BTCUSD": {
-                "open": "relaxed",
-                "mid": "relaxed",
-                "close": "relaxed"
+                "open": "baseline",
+                "mid": "baseline",
+                "close": "baseline"
             },
             "EURUSD": {
-                "open": "relaxed",
-                "mid": "relaxed",
-                "close": "relaxed"
+                "open": "baseline",
+                "mid": "baseline",
+                "close": "baseline"
             },
             "GOLD_CFD": {
-                "open": "relaxed",
-                "mid": "relaxed",
-                "close": "relaxed"
+                "open": "baseline",
+                "mid": "baseline",
+                "close": "baseline"
             },
             "XAGUSD": {
-                "open": "relaxed",
-                "mid": "relaxed",
-                "close": "relaxed"
+                "open": "baseline",
+                "mid": "baseline",
+                "close": "baseline"
             },
             "USOIL": {
-                "open": "relaxed",
-                "mid": "relaxed",
-                "close": "relaxed"
+                "open": "baseline",
+                "mid": "baseline",
+                "close": "baseline"
             },
             "NVDA": {
-                "open": "relaxed",
-                "mid": "relaxed",
-                "close": "relaxed"
+                "open": "baseline",
+                "mid": "baseline",
+                "close": "baseline"
             }
         }
     },
@@ -412,57 +412,57 @@
     },
     "tp_net_min_default": 0.0035,
     "tp_net_min": {
-        "EURUSD": 0.00045,
+        "EURUSD": 0.0035,
         "GOLD_CFD": 0.0035,
         "XAGUSD": 0.0035,
-        "USOIL": 0.0016,
+        "USOIL": 0.0035,
         "BTCUSD": 0.006,
-        "NVDA": 0.0025
+        "NVDA": 0.0035
     },
     "tp_min_pct": {
-        "default": 0.002,
-        "EURUSD": 0.00045,
-        "GOLD_CFD": 0.0025,
-        "USOIL": 0.0018,
+        "default": 0.0035,
+        "EURUSD": 0.0035,
+        "GOLD_CFD": 0.0035,
+        "USOIL": 0.0035,
         "BTCUSD": 0.004,
-        "NVDA": 0.0025,
-        "XAGUSD": 0.0032
+        "NVDA": 0.0035,
+        "XAGUSD": 0.0035
     },
     "low_atr_overrides": {
         "default": {
             "floor": 0.0008,
-            "tp_min_pct": 0.0015,
-            "rr_required": 1.3
+            "tp_min_pct": 0.0035,
+            "rr_required": 2.0
         },
         "EURUSD": {
             "floor": 0.0006,
-            "tp_min_pct": 0.0006,
-            "rr_required": 1.28
+            "tp_min_pct": 0.0035,
+            "rr_required": 2.0
         },
         "GOLD_CFD": {
             "floor": 0.0025,
-            "tp_min_pct": 0.0023,
-            "rr_required": 1.3
+            "tp_min_pct": 0.0035,
+            "rr_required": 2.0
         },
         "BTCUSD": {
             "floor": 0.0012,
             "tp_min_pct": 0.004,
-            "rr_required": 1.3
+            "rr_required": 2.0
         },
         "USOIL": {
             "floor": 0.0012,
-            "tp_min_pct": 0.0014,
-            "rr_required": 1.35
+            "tp_min_pct": 0.0035,
+            "rr_required": 2.0
         },
         "XAGUSD": {
             "floor": 0.0018,
-            "tp_min_pct": 0.0028,
-            "rr_required": 1.3
+            "tp_min_pct": 0.0035,
+            "rr_required": 2.0
         },
         "NVDA": {
             "floor": 0.0014,
-            "tp_min_pct": 0.0023,
-            "rr_required": 1.3
+            "tp_min_pct": 0.0035,
+            "rr_required": 2.0
         }
     },
     "tp_min_abs": {
@@ -795,22 +795,22 @@
         }
     },
     "core_rr_min": {
-        "default": 1.3,
-        "EURUSD": 1.3,
-        "GOLD_CFD": 1.3,
-        "USOIL": 1.3,
-        "NVDA": 1.3,
-        "BTCUSD": 1.2,
-        "XAGUSD": 1.4
+        "default": 2.0,
+        "EURUSD": 2.0,
+        "GOLD_CFD": 2.0,
+        "USOIL": 2.0,
+        "NVDA": 2.0,
+        "BTCUSD": 2.0,
+        "XAGUSD": 2.0
     },
     "momentum_rr_min": {
-        "default": 1.1,
-        "EURUSD": 1.15,
-        "GOLD_CFD": 1.1,
-        "USOIL": 1.1,
-        "NVDA": 1.2,
-        "BTCUSD": 1.1,
-        "XAGUSD": 1.1
+        "default": 2.0,
+        "EURUSD": 2.0,
+        "GOLD_CFD": 2.0,
+        "USOIL": 2.0,
+        "NVDA": 2.0,
+        "BTCUSD": 2.0,
+        "XAGUSD": 2.0
     },
     "intraday_atr_relax": {
         "EURUSD": 0.9,
