analysis_summary.json

--- a/config/analysis_settings.json
+++ b/config/analysis_settings.json
@@ -103,6 +103,50 @@
                 "session",
                 "data"
             ]
+        },
+        "day": {
+            "p_score_min": {
+                "default": 40.0,
+                "BTCUSD": 38.0,
+                "EURUSD": 38.0,
+                "GOLD_CFD": 40.0,
+                "NVDA": 38.0,
+                "USOIL": 39.0,
+                "XAGUSD": 40.0
+            },
+            "atr_threshold_multiplier": {
+                "default": 1.1,
+                "BTCUSD": 1.0,
+                "GOLD_CFD": 1.15,
+                "XAGUSD": 1.15
+            },
+            "required_gates": [
+                "spread",
+                "session",
+                "data"
+            ]
+        },
+        "swing": {
+            "p_score_min": {
+                "default": 46.0,
+                "BTCUSD": 44.0,
+                "EURUSD": 44.0,
+                "GOLD_CFD": 46.0,
+                "NVDA": 44.0,
+                "USOIL": 45.0,
+                "XAGUSD": 46.0
+            },
+            "atr_threshold_multiplier": {
+                "default": 1.35,
+                "BTCUSD": 1.2,
+                "GOLD_CFD": 1.4,
+                "XAGUSD": 1.4
+            },
+            "required_gates": [
+                "spread",
+                "session",
+                "data"
+            ]
         },    
         "suppressed": {
             "p_score_min": {
@@ -1697,6 +1741,74 @@
                     "cooldown_minutes": 5,
                     "max_concurrent": 1,
                     "sl_tp_rule": "SL ≥max(0.24 ATR, 78 USD); RR 1:1.5→2.6R"
+                }
+            }
+        },
+        "day": {
+            "default": {
+                "risk_pct": 1.2,
+                "core_rr_min": 2.2,
+                "momentum_rr_min": 2.0,
+                "tp_min_pct": 0.005,
+                "tp_min_abs": 0.0,
+                "sl_buffer": {
+                    "atr_mult": 0.32,
+                    "abs_min": 0.0008
+                },
+                "max_slippage_r": 0.16,
+                "max_spread_atr_pct": 0.45,
+                "cooldown_minutes": 180,
+                "max_concurrent": 1,
+                "sl_tp_rule": "Day: SL ≥max(0.32 ATR, 0.0008); TP1 ≥0.5%"
+            },
+            "assets": {
+                "GOLD_CFD": {
+                    "tp_min_abs": 4.0,
+                    "sl_buffer": {
+                        "atr_mult": 0.38,
+                        "abs_min": 0.9
+                    }
+                },
+                "XAGUSD": {
+                    "tp_min_abs": 0.8,
+                    "sl_buffer": {
+                        "atr_mult": 0.36,
+                        "abs_min": 0.2
+                    }
+                }
+            }
+        },
+        "swing": {
+            "default": {
+                "risk_pct": 1.0,
+                "core_rr_min": 2.4,
+                "momentum_rr_min": 2.2,
+                "tp_min_pct": 0.008,
+                "tp_min_abs": 0.0,
+                "sl_buffer": {
+                    "atr_mult": 0.45,
+                    "abs_min": 0.0012
+                },
+                "max_slippage_r": 0.18,
+                "max_spread_atr_pct": 0.4,
+                "cooldown_minutes": 720,
+                "max_concurrent": 1,
+                "sl_tp_rule": "Swing: SL ≥max(0.45 ATR, 0.0012); TP1 ≥0.8%"
+            },
+            "assets": {
+                "GOLD_CFD": {
+                    "tp_min_abs": 8.0,
+                    "sl_buffer": {
+                        "atr_mult": 0.5,
+                        "abs_min": 1.4
+                    }
+                },
+                "XAGUSD": {
+                    "tp_min_abs": 1.2,
+                    "sl_buffer": {
+                        "atr_mult": 0.48,
+                        "abs_min": 0.3
+                    }
                 }
             }
         },
