--- a/config/analysis_settings.json
+++ b/config/analysis_settings.json
@@ -228,8 +228,8 @@
         }
     },
     "active_session_status_profile": "default",
-    "active_entry_threshold_profile": "baseline",
-    "weekday_entry_threshold_profile": "baseline",
+    "active_entry_threshold_profile": "day",
+    "weekday_entry_threshold_profile": "day",
     "entry_profile_schedule_by_tod": {
         "default": {
             "open": "baseline",
