--- a/config/analysis_settings.json
+++ b/config/analysis_settings.json
@@ -2270,14 +2270,14 @@
                 "XAGUSD": 5,
                 "GOLD_CFD": 5,
                 "BTCUSD": 5,
-                "USOIL": 5,
+                "USOIL": 8,
                 "NVDA": 10
             },
             "min_minutes_after_hard_exit": {
                 "default": 15,
                 "EURUSD": 15,
                 "BTCUSD": 25,
-                "USOIL": 25,
+                "USOIL": 30,
                 "NVDA": 30
             }
         },
@@ -2287,7 +2287,9 @@
                 "default": 4,
                 "EURUSD": 5,
                 "BTCUSD": 3,
-                "USOIL": 4
+                "USOIL": 5,
+                "GOLD_CFD": 5,
+                "XAGUSD": 5
             }
         },
         "standby_notifications": {
