--- a/config/analysis_settings.json
+++ b/config/analysis_settings.json
@@ -2286,7 +2286,7 @@
             "min_bars_same_direction_before_flip": {
                 "default": 4,
                 "EURUSD": 5,
-                "BTCUSD": 3,
+                "BTCUSD": 4,
                 "USOIL": 5,
                 "GOLD_CFD": 5,
                 "XAGUSD": 5
@@ -2305,6 +2305,7 @@
         "2025-11-12: BTCUSD P-score kapu 45/43, risk sablon 0.20R slippage és BOS bias relax.",
         "2025-11-12: USOIL risk sablon 1.6 RR és cooldown csökkentés 20/15 percre.",
         "2025-11-13: Normál profil ATR(13), ATR-min és max spread limitek finomhangolva (EURUSD, GOLD_CFD, NVDA, USOIL, BTCUSD, XAGUSD); Fib zóna toleranciák frissítve.",
-        "2025-11-14: Cooldown lazítás (belépési és hard exit várakozások rövidítése) a több napi jelzésért."
+        "2025-11-14: Cooldown lazítás (belépési és hard exit várakozások rövidítése) a több napi jelzésért.",
+        "2025-11-15: BTCUSD flip-flop guard szigorítás (min_bars_same_direction_before_flip 3→4)."
     ]
 }
